app/styles/_general.scss
/* ... */
.privacy-policy { @extend .about; }

// ====

// Social login in Cadastro
.social-login {
  margin: 20px 0 20px 0;

  li {
    display: inline-block;
    margin: 0 10px 0 10px;

    &:first-child, &:last-child {
      margin: 0;
    }
  }

  .btn-login {
    margin: 0;
    float: left;
    width: 85px;
    font-size: ($fs-normal)+.4;
    background-image: none;
    padding: 0;
    text-align: center;
  }
}

// ====

// Inputs of change photo
@for $i from 01 through 16 {
  .avatar-#{$i} {
    i { @include path('avatar/avatar-'+ $i + '.svg'); }
  }
}

//
// Media queries
//

// iPads
@media screen and (min-width: 768px) {
  // Header
  .navbar-nav { float: right; }
  .btn-survey { margin-top: 15px; }
  // ====

  // Content internal
  .content-internal { float: right; }
  // ====
  .card-avatar-content {padding-left: 50px;}

  // Nav primary
  .sidebar {
    position: fixed;
    left: 0;
    min-height: 700px;
    height: 100%;
  }

  .nav-primary {
    margin-top: 20px;
    overflow-y: scroll;
    height: 80%;

    a {
      font-size: ($fs-normal);
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
  // ====

  // How it Works
  .title-primary {
    font-size: ($fs-large)+1;

    &.news {
      margin: 50px 0 70px 0;
      font-size: ($fs-large)+1;
    }
  }

  .step-box {
    height: 220px;
    margin-bottom: 30px;
  }

  .nav-secondary {
    li {
      display: inline-block;

      &::before {
        content: '';
        display: inline-block;
        vertical-align: middle;
        width: 1px;
        background-color: $btn-primary;
        height: 20px;
        position: absolute;
        top: 15px;
        right: -10px;
      }

      &:last-child {
        &::before {
          background-color: transparent;
        }
      }
    }
  }

  .logo-ministerio {
    margin-top: 20px;

    img { width: auto; }
  }
  // ====

  // Register box
  .register-box {
    .title-primary { font-size: $fs-large; }
  }
  // ====

  // Content internal
  .section-title {
    margin-top: 20px;
    padding-top: 0;
  }

  .list-tips { margin-right: 30px; }
  // ====

  // Main
  .main-content {
    height: auto;
    min-height: 100%;
  }
  // ====

  // Survey
  .survey-avatar { margin: 15px; }

  .survey-content { min-height: 1024px; }

  .btn-hayf { margin: 0 40px; }
  // ====

  // change photo
  .form-change-photo-default { text-align: left; }
  .change-photo-subtitle { text-align: left; }
  // ====

  // fale conosco
  .fale-conosco {
    .title-primary {
      font-size: ($fs-medium)+1.7;
    }

    .bt-login {
      text-indent: 50px;
    }
  }
  // ====

  // health daily
  .health-daily-avatar {
    float: left;
    width: 100%;
    margin: 0 auto;
    display: inline-block;
    text-align: center;
    margin-top: 15px;
  }

  .total-participants {
    .geral {
      .status  {
        width: auto;
        margin: 30px 0 0 20px;
      }
    }
  }
  // ====

  // ht-telefones
  .telephone-item {
    text-align: left;
    min-height: 100px;

    figcaption { margin-top: 25px; }
  }
  // ====
}

// Desktops
@media screen and (min-width: 992px) {

  // How it Works
  .step-title { font-size: ($fs-medium + $fs-normal)+.4; }

  .logo-ministerio {
    img { width: auto; }
  }
  //  ====

  // Nav primary
  .nav-primary {
    a { font-size: ($fs-normal)+.2; }
  }
  // ====

  // Survey
  .survey-content {
    .title-primary{ font-size: ($fs-large)+1; }
  }
  // ====

  // fale conosco
  .fale-conosco { margin-top: 70px; }
  // ====

  // health daily
  .sort-by {
    position: absolute;
    top: 15px;
    right: 15px;
    margin: 0;
  }

  .health-daily-avatar {
    float: left;
    width: 180px;
    display: inline-block;
    text-align: center;
    margin: 30px 0 0 30px;
  }


  .total-participants {
    float: right;
    margin: 22px 0 20px 0;

    .geral {
      .status  {
        width: auto;
        margin: 30px 0 0 20px;
      }
    }
  }

  // ====

  //policy and privacy
  .wrapper-full-page {

    .privacy-policy {

      .title-primary {
        font-size: ($fs-large)+1;
        margin: 45px auto 90px auto;
      }
    }
  }

  // ===

  // .sub-nav {
  //   max-height: 360px;
  //   overflow: scroll;
  // }


  // Social login in Cadastro (desktop stylesheet)
  .social-login {
    margin: 20px 0 20px 0;

    li {
      display: inline-block;
      margin: 0 10px 0 10px;

      &:first-child, &:last-child {
        margin: 0;
      }
    }

    .btn-login {
      margin: 0;
      float: left;
      width: 170px;
      background-position: 15% center;
    }

    .facebook {
      background-size: 7%;
      @include path('btn-facebook.svg');
    }

    .google {
      background-size: 8%;
      @include path('btn-google.svg');
    }

    .twitter {
      background-size: 13%;
      @include path('btn-twitter.svg');
    }
  }

  // ====

  // Fale Conosco
  .fale-conosco {
    .btn-login {
      &.facebook { background-size: 8%; }
      &.twitter { background-size: 16%; }
    }
  }
  // ====

  // telefones-uteis
  .telephone-item { margin-left: 40px; }
  // ====

  .form-search-home {
    .dropdown-menu { width: 80%; }
  }
}

// Large Desktops
@media screen and (min-width: 1200px) {}

